# IVANNA-FUSION

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_Industrial.txt  CONTINUATION_PROMPT.md  Kotlin  README.md  REPAIRS_SUMMARY.md  accept_android_licenses.sh  build.gradle  clean_architecture_fix.sh  correccion_final.sh  corregir.sh  debug.keystore  disable_cmake_native.sh  fix_aapt2_final.sh  fix_aapt2_path.sh  fix_aapt2_syntax.sh  fix_android_sdk.sh  fix_cmake_safe_mode.sh  fix_compilation_errors.sh  fix_kotlin_quirurgico.sh  fix_safe_consistency.sh  fix_sdkmanager_path.sh  fix_unresolved_references.sh  gradle.properties  gradlew  gradlew.bat  install_part1.sh  module.prop  omega_client  omega_client.c  omega_daemon_updated.c  requirements.txt  settings.gradle  settings.gradle.kts  setup.sh
.github/workflows/: build-apk.yml  build-magisk.yml  build.yml  industrial.yml  ivanna-ci.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CMakeLists.txt.bak  ai_inference.h  audio_effect_compat.h  audio_orchestrator.cpp  audio_pipeline_android.cpp  compressor.h  evolutionary_kernel.cpp  harmonic_exciter.h  ivanna_native_lib.cpp  ivanna_native_lib_v2.cpp  jni_wrapper.cpp  model_buffer.h  omega_daemon.cpp  omega_effect.cpp  omega_shared.h  parametric_eq.h  phase_oracle.cpp  shm_hyperplane.cpp  spatial_engine.cpp
app/src/main/cpp/hardware/: audio_effect.h
app/src/main/cpp/pro_dsp/: ivanna_dsp.cpp
app/src/main/java/com/ivanna/fusion/pro/: DSPBridge.kt
app/src/main/java/com/ivannafusion/: AIScreen.kt  AudioCallbackManager.kt  AudioEngine.kt  AudioEngine.kt.backup  AudioEngine.kt.bak2  AudioProcessingService.kt  AudioStubs.kt  ConvolutionEngine.kt  DSPController.kt  DSPState.kt  DecorrelationEngine.kt  DspModels.kt  EffectsControlScreen.kt  GestureDetector.kt  HomeScreen.kt  IVANNAApplication.kt  IntroScreen.kt  IvannaNativeLib.kt  MagiskBridge.kt  MainActivity.kt  MonitorScreen.kt  MuController.kt  OmegaDaemon.kt  OmegaEngineBridge.kt  OmegaMagiskBridge.kt  PFEngineScreen.kt  PlaybackCaptureService.kt  PresetManager.kt  PresetsScreen.kt  SettingsAuditScreen.kt  ShmManager.kt  SimbiosisScreen.kt  SpatialAudioEngineV2.kt  SpatialStateRepository.kt  ThermalMonitor.kt  YamnetClassifier.kt
app/src/main/java/com/ivannafusion/ai/: AICalibration.kt  README.md  TrainingWorker.kt
app/src/main/java/com/ivannafusion/dsp/: DSPState.kt
app/src/main/java/com/ivannafusion/navigation/: AppNavigation.kt  Routes.kt
app/src/main/java/com/ivannafusion/persistence/: ParameterStore.kt
app/src/main/java/com/ivannafusion/screens/: AIAssistantScreen.kt  AIScreen.kt  DynamicEQScreen.kt  EQScreen.kt  HomeScreen.kt  MonitorScreen.kt  MoreMenuScreen.kt  OtherScreens.kt  PFEngineScreen.kt  PresetsScreen.kt  SettingsScreen.kt  SimbiosisScreen.kt  SimpleScreens.kt  SpatialScreen.kt
app/src/main/java/com/ivannafusion/ui/components/: Controls.kt  (+6 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_effects_control.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/raw/: copyright.txt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
config/: audio_effects.conf
core/: complexity_registry.h  ivanna_core_stub.cpp
core/ai/: ai_controller.h
core/consistency/: device_fingerprint.h
core/dsp/: biquad_neon.h  biquad_simd.h  ivanna_core.cpp
core/pipeline/: audio_pipeline.h
core/spatial/: hrtf_engine.h
docs/: ARQUITECTURA.md  estructura_original.txt  instrucciones_compilacion.md  variables_spec.tsv
edge_ai/: CMakeLists.txt.bak  README.md
edge_ai/daemon/: export_to_executorch.sh  omega_daemon.cpp
edge_ai/effect/: omega_effect.cpp
edge_ai/magisk_module/: customize.sh  module.prop  service.sh
edge_ai/magisk_module/system/etc/: audio_effects.xml
edge_ai/src/: mobile_omega_engine.py
extracted_module/: customize.sh  module.prop  service.sh
extracted_module/system/etc/: audio_effects.xml
extracted_module/system/etc/init.d/: omega_daemon_start
include/ivanna/core/: SimdDefs.h
integration/android/: audio_hal_module.cpp
magisk_module/: build_daemon.sh  customize.sh  module.prop  service.sh  test_client  test_client.cpp  test_cmd  test_set.cpp
magisk_module/daemon_src/: CMakeLists.txt.bak  omega_daemon_main.cpp
omega_engine/: audio_pipeline_android.cpp  export_to_executorch.py  mobile_omega_engine.py
pf_engine/: CMakeLists.txt  README.md  build_android.sh  gen_presets.py
pf_engine/amps/: amp_models.cpp
pf_engine/config/: pf_defaults.conf
pf_engine/core/: pf_engine.cpp  pf_engine.h  pf_evolution.cpp  pf_evolution.h
pf_engine/daemon/: pf_ctl.sh  pf_daemon.cpp
pf_engine/dsp/: pf_dsp.cpp
pf_engine/learning/: pf_fft.cpp  pf_fft.h  pf_learning.cpp  pf_learning.h
pf_engine/presets/: 70s_rock.pfp  clean_studio.json  marshall_crunch.json  marshall_crunch.pfp  psychedelic.json  psychedelic.pfp  vox_sparkle.json  vox_sparkle.pfp
presets/: 70s_rock.json  clean_studio.pfp
scripts/: build_and_sign.sh  build_magisk_module.sh  gen_sched_table.py  verify_latency.py
src/: CMakeLists.txt  CMakeLists.txt.bak
src/ai/: ai_assistant.cpp  ai_assistant.h
src/cpp/: biquad_neon.cpp  compressor.cpp  effect_library.cpp  harmonic_exciter.cpp  ivanna_fusion.cpp  parametric_eq.cpp
src/dsp/: ai_audio_analyzer.cpp  ai_audio_analyzer.h  autoeq.cpp  autoeq.h  bass_enhancer.cpp  bass_enhancer.h  convolver.cpp  convolver.h  dynamic_eq.cpp  dynamic_eq.h  neon_optimizer.cpp  neon_optimizer.h  stereo_widener.cpp  stereo_widener.h
src/fft/: android_effect_abi.h  build_termux.sh  fft_processor.cpp  fft_processor.h  ivanna_fft_effect.c  package_termux.sh
src/include/: biquad_neon.h  complexity_registry.h  compressor.h  harmonic_exciter.h  ivanna_fusion.h  parametric_eq.h  stereo_widener.h
src/presets/: preset_manager.cpp  preset_manager.h
system/etc/: audio_effects_ivanna.xml
tests/: CMakeLists.txt  ivanna_test.cpp
(+11 files in other folders)
