# IVANNA-FUSION Test Suite
# Minimal test configuration to satisfy CMake add_subdirectory(tests)

# Placeholder: tests will be added in Phase 2
message(STATUS "IVANNA: Test suite configured (placeholder)")

# Example test target (commented out until tests exist)
# add_executable(ivanna_test ivanna_test.cpp)
# target_link_libraries(ivanna_test PRIVATE ivanna_core)
# add_test(NAME ivanna_test COMMAND ivanna_test)
